--- a/andersreizen/src/app/tab-panel/tab-panel.component.html
+++ b/andersreizen/src/app/tab-panel/tab-panel.component.html
@@ -2,7 +2,7 @@
     <div class="tab-container">
         <li [ngClass]="tab === 0 ? 'selected tab':'tab'" (click)="selectTab(0, $event)">1. Wagenpark</li>
         <li [ngClass]="tab === 1 ? 'selected tab':'tab'" (click)="selectTab(1, $event)">2. Woon-werkverkeer - vaste vergoeding</li>
-        <li [ngClass]="tab === 2 ? 'selected tab':'tab'" (click)="selectTab(2, $event)">3. Declaraties</li>
+        <li [ngClass]="tab === 2 ? 'selected tab':'tab'" (click)="selectTab(2, $event)">3. Zakelijk verkeer</li>
     </div>
     <div class="border-bottom"></div>
 </div>
