--- a/andersreizen/src/app/intro/intro.component.html
+++ b/andersreizen/src/app/intro/intro.component.html
@@ -3,29 +3,44 @@
         <h1 class="and-h1-normal">Introductie</h1>
     </div>
     <div class="row">
-        <app-content-panel title="Scope">
+        <app-content-panel title="Scope" [hideTitleBar]="true">
             <p>Welkom bij de online omgeving voor de mobiliteit footprint van Anders Reizen. Deze tool kan je gebruiken
-                om de C02 footprint per medewerker te berekenen. Het kan voorkomen dat sommige data niet beschikbaar is
-                of dat binnen jullie bedrijf geen gebruik maakt van sommige categorieen (Bijv. Bio-CNG). Het
-                uitgangspunt is: probeer zoveel mogelijk data in te vullen. Beginnend bij het basisjaar 2016, indien
-                niet beschikbaar. Start dan bij het eerst volgende beschikbare jaar. Vul graag voor elk jaar de
-                mobiliteit footprint in. Alle data wordt opgeslagen op jullie bedrijfsaccount. Per bedrijf kan er maar
-                één account aangemaakt worden. Deze data kan alleen door jullie eigen account bekeken worden en door de
-                leden van het programma team van Anders Reizen. Verder wordt deze data niet gedeeld. De data wordt
-                opgeslagen op een beveiligde server. Deze data wordt gebruikt om een rapportage te maken om jullie
-                inzicht te geven in jullie C02 uitstoot. Wanneer er meer data ingevuld wordt, hoe beter de uiteindelijke
-                rapportage wordt. </p>
-            <p>De scope is personenvervoer voor woon-werkverkeer en zakelijk verkeer voor de Nederlandse activiteiten
-                van een bedrijf. Onder personenvervoer vallen alle modaliteiten, zoals het openbaar vervoer, fiets,
-                vliegtuig, auto, et cetera. Voor personenvervoer met de auto geldt dat zowel geel als grijs kentekens
-                auto’s in scope zijn, waarbij voor grijze kentekens een maximum geldt van 3500 kg en uit scope is
-                wanneer het voertuig ingezet wordt voor goederentransport. </p>
-            <p>Vragen? Neem dan contact op via <a href="mailto:nigel.vanderweerd@andersreizen.nu">nigel.vanderweerd@andersreizen.nu</a></p>
+                om
+                de C02 footprint per medewerker te berekenen. Het kan voorkomen dat sommige data niet beschikbaar is of
+                dat
+                binnen jullie bedrijf geen gebruik gemaakt wordt van sommige categorieën (Bijv. Bio-CNG). Laat deze
+                graag
+                leeg of vul 0 in. Het uitgangspunt is dat je probeert zoveel mogelijk data in te vullen. Beginnend bij
+                het
+                basisjaar 2016, indien niet beschikbaar, start bij het eerstvolgende beschikbare jaar. Alle data wordt
+                opgeslagen op jullie bedrijfsaccount. Per bedrijf kan er maar één account aangemaakt worden. Deze data
+                kan
+                alleen door jullie eigen account bekeken worden en door de leden van het programma team van Anders
+                Reizen.
+                Verder wordt deze data niet gedeeld. De data wordt opgeslagen op een beveiligde server. Deze data wordt
+                gebruikt om een rapportage te maken om jullie inzicht te geven in jullie C02 uitstoot. Wanneer er meer
+                data
+                ingevuld wordt, hoe beter de uiteindelijke rapportage wordt. Vul graag voor elk (rapportage)jaar de
+                mobiliteit footprint in. Je vult een jaar in en deze wordt opgeslagen in een database. Vervolgens kan je
+                dit
+                nogmaals doen voor een ander jaar.</p>
+            <p></p>
+            <h6><b>Scope</b></h6>
+
+            <p style="padding-left: 0px">De scope is personenvervoer voor woon-werkverkeer en zakelijk
+                verkeer voor de Nederlandse activiteiten van een bedrijf. Onder personenvervoer vallen alle
+                modaliteiten,
+                zoals het openbaar vervoer, fiets, vliegtuig, auto, et cetera. Voor personenvervoer met de auto geldt
+                dat
+                zowel geel als grijs kentekens auto’s in scope zijn, waarbij voor grijze kentekens een maximum geldt van
+                3500 kg en uit scope is wanneer het voertuig ingezet wordt voor goederentransport.</p>
+            <p>Vragen? Neem dan contact op via <a href="mailto:nigel.vanderweerd@andersreizen.nu">nigel.vanderweerd@andersreizen.nu</a>
+            </p>
         </app-content-panel>
     </div>
     <div class="row ">
         <div class="col-3 p-0">
-            <app-content-panel title="Introductie">
+            <app-content-panel title="Doel">
                 <p>Iedere organisatie die zich aansluit bij de Coalitie Anders Reizen tekent de Dutch Sustainable
                     Mobility Pledge. Deze pledge zet de ambitie voor de koplopers om een shift te maken naar een
                     duurzaam(er) mobiliteitsbeleid als mogelijke oplossing tegen klimaatverandering. Deze ambitie komt
