--- a/andersreizen/src/app/left-nav/left-nav.component.html
+++ b/andersreizen/src/app/left-nav/left-nav.component.html
@@ -12,9 +12,10 @@
     <div class="parent">
         <span class="heading">OVERIGE</span>
         <li (click)="goto('user/cbs-cijfers');selectedmenu='cbs'" [ngClass]="selectedmenu === 'cbs' && 'selected'"><span class="icon"><img [attr.src]="selectedmenu === 'cbs' ? 'assets/Icon ionic-md-analytics-inverse.svg' : 'assets/Icon ionic-md-analytics.svg'"></span><span class="menu-item">CBS Cijfers</span></li>
+        <li><a href="http://co2emissiefactoren.nl">co2emissiefactoren.nl <img src="assets/Icon%20feather-external-link.svg" /> </a></li>
     </div>
     </div>
     <span class="footer-link-container">
-    <a href="https://co2emissiefactoren.nl">co2emissiefactoren.nl <img src="assets/Icon%20feather-external-link.svg" /> </a>
+
         </span>
 </div>
