--- a/andersreizen/src/app/left-nav/left-nav.component.scss
+++ b/andersreizen/src/app/left-nav/left-nav.component.scss
@@ -44,7 +44,13 @@
     cursor: pointer;
     padding-left: 35px;
     margin-top: 10px;
-
+    a{
+      color: #0c3d81;
+      padding-top: 5px;
+      img {
+        margin-left: 20px;
+      }
+    }
     .menu-item{
       letter-spacing: 0px;
       color: #0B3C82;
